refactoring sequence